--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Order summary card</title>
@@ -27,7 +27,7 @@
   </head>
   <body>
     <main class="card-container">
-      <img src="images/illustration-hero.svg" alt="hero-img" class="main-img" />
+      <img src="illustration-hero.svg" alt="hero-img" class="main-img" />
       <div class="centr-element">
         <h1 class="order-header">Order Summary</h1>
         <p class="paragraph">
