--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p>
       </div>
       <div class="mid-content">
-        <img src="images/icon-music.svg" alt="music-icon" class="music-icon" />
+        <img src="icon-music.svg" alt="music-icon" class="music-icon" />
         <div class="price-container">
           <h3 class="annul-plan">Annual Plan</h3>
           <p class="price">$59.99/year</p>
