adding  a div with a class="card"
I added a class container for the card under the main one

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <main class="card-container">
+      <div class="card">
       <img src="illustration-hero.svg" alt="hero-img" class="main-img" />
       <div class="centr-element">
         <h1 class="order-header">Order Summary</h1>
@@ -50,6 +51,7 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Alya Essa</a>
+      </div>
       </div>
     </main>
   </body>
