--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Order summary card</title>
@@ -28,31 +28,40 @@
   <body>
     <main class="card-container">
       <div class="card">
-      <img src="illustration-hero.svg" alt="hero-img" class="main-img" />
-      <div class="centr-element">
-        <h1 class="order-header">Order Summary</h1>
-        <p class="paragraph">
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
-        </p>
-      </div>
-      <div class="mid-content">
-        <img src="icon-music.svg" alt="music-icon" class="music-icon" />
-        <div class="price-container">
-          <h3 class="annul-plan">Annual Plan</h3>
-          <p class="price">$59.99/year</p>
+        <img
+          src="images/illustration-hero.svg"
+          alt="hero-img"
+          class="main-img"
+        />
+        <div class="centr-element">
+          <h1 class="order-header">Order Summary</h1>
+          <p class="paragraph">
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
         </div>
-        <h3 class="change">Change</h3>
-      </div>
-      <button>Proceed to Payment</button>
-      <h3 class="cancel">Cancel Order</h3>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Alya Essa</a>
-      </div>
+        <div class="mid-content">
+          <img
+            src="images/icon-music.svg"
+            alt="music-icon"
+            class="music-icon"
+          />
+          <div class="price-container">
+            <h3 class="annul-plan">Annual Plan</h3>
+            <p class="price">$59.99/year</p>
+          </div>
+          <h3 class="change">Change</h3>
+        </div>
+        <button>Proceed to Payment</button>
+        <h3 class="cancel">Cancel Order</h3>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Alya Essa</a>
+        </div>
       </div>
     </main>
   </body>
 </html>
+
